--- a/index.html
+++ b/index.html
@@ -4,12 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <h1></h1>
-    <div>
-        <h2>etapa productiva</h2>
-    </div>
+    <footer class="pie">
+        <img  height="90px" width="85px" src="img/pie de pagina.png" alt="">
+        <div class="info">
+          <p>&copy; Servicio Nacional de Aprendizaje SENA-Dirección General </p>
+          <p>Calle 57 No. 8 - 69 Bogotá D.C. (Cundinamarca), Colombia</p>
+         
+           <p>Conmutador Nacional (57 1) 5461500 - Extensiones</p>
+           <p>Correo notificaciones judiciales: servicioalciudadano@sena.edu.co </p>
+        </div>
+        <nav class="icons">
+       <a href="https://www.facebook.com/SENA/" target=_blank> <img  height="30px" width="20px" src="img/icono.facebook.jpg" alt=""></a>
+       <a href="https://www.instagram.com/senacomunica/" target=_blank> <img  height="30px" width="30px" src="img/instagram-icon.png" alt=""></a>
+       <a href="https://twitter.com/SENAComunica" target=_blank><img  height="30px" width="30px" src="img/icono.twitter.png" alt=""></a>
+       <a href="https://www.youtube.com/user/SENATV" target=_blank><img  height="35px" width="35px" src="img/icono.youtube.png" alt=""></a>
+       <a href="https://www.sena.edu.co/es-co/Paginas/default.aspx" target=_blank><img  height="35px" width="35px" src="img/icono.spotify-.png" alt=""></a>
+       <a href="https://soundcloud.com/senacolombia/" target=_blank><img  height="35px" width="50px" src="img/icono.soundcloud.png" alt=""></a>
+       </nav>
+      </footer>  
     
 </body>
 </html>
