--- a/legal.html
+++ b/legal.html
@@ -17,19 +17,19 @@
             <div class="segui">
                 <h1>SEGUIMIENTO</h1>
             </div>
-            <div>
-                <img src="" alt="">
+            <div class="usuario">
+                <img src="images/usuario.png" alt="">
                 <h1>RONALD</h1>
             </div>
             <div class="proceso">
-                <div>
-                    <h1><i class="fa fa-address-card-o" aria-hidden="true"></i>LEGALIZACION</h1>
+                <div class="legal">
+                    <h1><i class="fa fa-address-card-o" aria-hidden="true"></i> LEGALIZACION</h1>
                 </div>
-                <div>
-                    <h1><i class="fa fa-graduation-cap" aria-hidden="true"></i>CERTIFICACION</h1>
+                <div class="certifi">
+                    <h1><i class="fa fa-graduation-cap" aria-hidden="true"></i> CERTIFICACION</h1>
                 </div>
-                <div>
-                    <h1><i class="fa fa-users" aria-hidden="true"></i>APRENDICES</h1>
+                <div class="aprendiz">
+                    <h1><i class="fa fa-users" aria-hidden="true"></i> APRENDICES</h1>
                 </div>
             </div>
         </section>
@@ -37,14 +37,14 @@
             <div class="busqueda">
                 <div>
                     <form>
-                        <input type="text" name="buscar" placeholder="Alternativa" required><i class="fa fa-arrow-down" aria-hidden="true"></i>
+                        <input type="text" name="buscar" placeholder="ALTERNATIVA" required><i class="fa fa-arrow-down" aria-hidden="true"></i>
                     </form>
                 </div>
-                <div>
+                <div class="primero">
                     <h1>Formato 023</h1>
                     <input type="submit" name="cargar" value="Cargar">
                 </div>
-                <div>
+                <div class="segundo">
                     <h1>Constancia de la empresa</h1>
                     <input type="submit" name="cargar1" value="Cargar">
                 </div>
@@ -59,28 +59,28 @@
             <div class="documento">
                 <input type="text" name="docu" placeholder="DOCUMENTO"><i class="fa fa-search" aria-hidden="true"></i>
             </div>
-            <div class="aprendiz">
-                <table>
+            <div class="datos_aprendiz">
+                <table class="tabla1" cellpadding="10" cellspacing="0">
                   <tr>
                       <th colspan="2">DATOS DEL APRENDIZ</th>
                   </tr> 
                   <tr>
                       <td>NOMBRES</td>
-                      <td></td>
+                      <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
                   </tr>
                   <tr>
                     <td>DOCUMENTO</td>
-                    <td></td>
+                    <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
                   </tr>
                   <tr>
                     <td>CORREO</td>
-                    <td></td>
+                    <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
                   </tr>
                   <tr>
                     <td>TELEFONO</td>
-                    <td></td>
+                    <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
                   </tr>
-                </table>
+                </table class="tabla2">
                 <br>
                 <table>
                     <tr>
@@ -88,27 +88,27 @@
                     </tr> 
                     <tr>
                         <td>REGIONAL:</td>
-                        <td></td>
+                        <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
                     </tr>
                     <tr>
                       <td>CENTRO DE FORMACION:</td>
-                      <td></td>
+                      <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
                     </tr>
                     <tr>
                       <td>PROGRAMA DE FORMACION:</td>
-                      <td></td>
+                      <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
                     </tr>
                     <tr>
                       <td>FICHA:</td>
-                      <td></td>
+                      <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
                     </tr>
                 </table>
             </div>
         </section>
-        <footer>
+        <footer class="pie-pag">
             <h1>SENA CENTRO DE INDUSTRIA Y CONSTRUCCION</h1>
             <h1>IBAGUE-TOLIMA</h1>
-            <img src="" alt="">
+            <img src="images/sena (1).jpg" alt="">
         </footer>
     </div>
     
