--- a/legal.html
+++ b/legal.html
@@ -108,7 +108,7 @@
         <footer class="pie-pag">
             <h1>SENA CENTRO DE INDUSTRIA Y CONSTRUCCION</h1>
             <h1>IBAGUE-TOLIMA</h1>
-            <img src="images/sena (1).jpg" alt="">
+            <img src="images/senac.png" alt="">
         </footer>
     </div>
     
