index.html y index.css
Creacion de la pagina del index html y sus estilos.

--- a/index.html
+++ b/index.html
@@ -7,21 +7,38 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-   
+   <header>
+
+        <div class="imgmenu">
+            <img src="https://lh3.googleusercontent.com/proxy/SBrI7Wu-qiLnuXHNQUlReXj0Q9xdlP9RISym2NYKAR0UpJnIeBdsmxAy5oJZD_6GOn_1b9ucL9PUDJtqmwuxSaUyhXY" alt="">
+        </div>
+
+        <div class="title">
+            <h1>ETAPA PRODUCTIVA</h1>
+        </div>
+
+        <div class="logoo">
+            <img src="imagen/pie de pagina.png" alt="no font">
+        </div>
+
+   </header>
+        <div class="contenido">
+
+            <div class="video">
+                <iframe  src="https://www.powtoon.com/embed/eeZpDKZQsfe/" frameborder="0%" ></iframe>
+            </div>
+
+        </div>
+
     <footer class="pie">
-        <img  height="90px" width="85px" src="imagen/pie de pagina.png" alt="">
+        <div class="imgpie">
+            <img   src="imagen/pie de pagina.png" alt="">
+        </div>
+        
         <div class="info">
           <p>&copy; Servicio Nacional de Aprendizaje SENA-Dirección General </p>
           <p>Calle 57 No. 8 - 69 Bogotá D.C. (Cundinamarca), Colombia</p>
         </div>
-        <nav class="icons">
-       <a href="https://www.facebook.com/SENA/" target=_blank> <img  height="30px" width="20px" src="imagen/icono.facebook.jpg" alt=""></a>
-       <a href="https://www.instagram.com/senacomunica/" target=_blank> <img  height="30px" width="30px" src="imagen/instagram-icon.png" alt=""></a>
-       <a href="https://twitter.com/SENAComunica" target=_blank><img  height="30px" width="30px" src="imagen/icono.twitter.png" alt=""></a>
-       <a href="https://www.youtube.com/user/SENATV" target=_blank><img  height="35px" width="35px" src="imagen/icono.youtube.png" alt=""></a>
-       <a href="https://www.sena.edu.co/es-co/Paginas/default.aspx" target=_blank><img  height="35px" width="35px" src="imagen/icono.spotify-.png" alt=""></a>
-       <a href="https://soundcloud.com/senacolombia/" target=_blank><img  height="35px" width="50px" src="imagen/icono.soundcloud.png" alt=""></a>
-       </nav>
       </footer> 
 
     
