--- a/instructor/evidencias.html
+++ b/instructor/evidencias.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/evidencias.css">
+    <link rel="stylesheet" href="../css/evidencias.css">
 </head>
 <body>
             <!---menu de la pagina-->
@@ -20,7 +20,7 @@
         <div class="tichert">
             <h1>Instructor</h1>
         </div>
-            <img  class="avatar"  src="imagen/instructor.png"  alt="">
+            <img  class="avatar"  src="../imagen/instructor.png"  alt="">
                 <h2 id="cesar">Cesar Esquivel</h2>
             <div id="segir">
                 <a href=""><h2>Seguimiento evidencias</h2></a>
@@ -106,21 +106,15 @@
 
             <!---footer o pie de la pagina-->
    
-
             <footer class="pie">
-                <img  height="90px" width="85px" src="imagen/pie de pagina.png" alt="">
+                <div class="imgpie">
+                    <img   src="../imagen/pie de pagina.png" alt="">
+                </div>
+                
                 <div class="info">
                   <p>&copy; Servicio Nacional de Aprendizaje SENA-Dirección General </p>
                   <p>Calle 57 No. 8 - 69 Bogotá D.C. (Cundinamarca), Colombia</p>
                 </div>
-                <nav class="icons">
-               <a href="https://www.facebook.com/SENA/" target=_blank> <img  height="30px" width="20px" src="imagen/icono.facebook.jpg" alt=""></a>
-               <a href="https://www.instagram.com/senacomunica/" target=_blank> <img  height="30px" width="30px" src="imagen/instagram-icon.png" alt=""></a>
-               <a href="https://twitter.com/SENAComunica" target=_blank><img  height="30px" width="30px" src="imagen/icono.twitter.png" alt=""></a>
-               <a href="https://www.youtube.com/user/SENATV" target=_blank><img  height="35px" width="35px" src="imagen/icono.youtube.png" alt=""></a>
-               <a href="https://www.sena.edu.co/es-co/Paginas/default.aspx" target=_blank><img  height="35px" width="35px" src="imagen/icono.spotify-.png" alt=""></a>
-               <a href="https://soundcloud.com/senacolombia/" target=_blank><img  height="35px" width="50px" src="imagen/icono.soundcloud.png" alt=""></a>
-               </nav>
               </footer> 
   
 
